--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "http://localhost"
+baseURL = "https://007ba7.us"
 title = "Cerulean"
 theme = "godocs"
 # disable language
@@ -51,20 +51,17 @@ link = "plugins/search/lunr.min.js"
 # main menu
 [[menu.main]]
 name = "Faq"
-url = "faq"
+url = "faq/"
 weight = 1
-
-
-
 
 [[menu.footer]]
 name = "contact"
-url = "contact"
+url = "contact/"
 weight = 2
 
 [[menu.footer]]
 name = "faq"
-url = "faq"
+url = "faq/"
 weight = 3
 
 
@@ -73,7 +70,7 @@ weight = 3
 # logo = "img/cerulean.png"
 # Meta data
 description = "This is meta description"
-author = "Themefisher"
+author = "Jeff Fogarty"
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 # Google Analitycs
@@ -86,9 +83,9 @@ preloader = "" # use jpg, png, svg or gif format.
 
 # Navigation button solid
 [params.navigation_button_solid]
-enable = true
+enable = false
 label = "contact"
-link = "contact"
+link = "contact/"
 
   
 ############################# social site ########################
@@ -126,7 +123,7 @@ content = "I'm interest to hear your ideas for a post"
 
   # call to action button
   [Languages.en.call_to_action.button]
-  enable = "true"
+  enable = "false"
   label = "Submit an idea"
   link = "contact"
 
@@ -142,13 +139,13 @@ home = "Accueil"
 
 # call to action
 [Languages.fr.call_to_action]
-enable = true
+enable = false
 title = "Still Didn't Find Your Answer?"
 image = "images/cta-illustration.jpg"
 content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 
   # call to action button
   [Languages.fr.call_to_action.button]
-  enable = "true"
+  enable = "false"
   label = "Submit a ticket"
   link = "contact"
