ADD: favicon and formspree

--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ weight = 3
 description = "This is meta description"
 author = "Jeff Fogarty"
 # contact form action
-contact_form_action = "#" # contact form works with https://formspree.io
+contact_form_action = "https://formspree.io/mjvaqpge"   # contact form works with https://formspree.io
 # Google Analitycs
 google_analitycs_id = "" # your id
 
