--- a/007ba7.yaml
+++ b/007ba7.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: hugo-app
+  labels:
+    app: hugo-app
 ---
 apiVersion: apps/v1
 kind: Deployment
